--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -3,7 +3,8 @@ import { Image } from 'astro:assets';
 ---
 
 <header
-  class="relative flex min-h-screen w-full items-center justify-center overflow-hidden bg-black px-8 text-white"
+  class="fade-section relative flex min-h-screen w-full items-center justify-center overflow-hidden bg-black px-8 text-white"
+  id="home"
 >
   <!-- Matrix Animated Background -->
   <div id="matrix-bg" class="absolute inset-0 opacity-30"></div>
